# Rivr

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FLASHING.md  LICENSE  Makefile.linux  README.md  RELEASE_CHECKLIST.md  partitions.csv  platformio.ini  rivr_replay.jsonl  sdkconfig.ble  sdkconfig.client_esp32devkit_e22_900  sdkconfig.client_lilygo_t3s3  sdkconfig.client_lilygo_t3s3_ble  sdkconfig.defaults  sdkconfig.esp32_hw  sdkconfig.esp32_sim  sdkconfig.heltec_v3_8mb  sdkconfig.repeater_esp32devkit_e22_900  sdkconfig.repeater_lilygo_lora32_v21  sdkconfig.repeater_lilygo_tbeam_sx1262  sdkconfig.xiao_usb_console  user_config_template.h
.cargo/: config.toml
.github/: CONTRIBUTING.md  firmware-bundles.json  firmware-matrix.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  hardware_compat.md  logs_supportpack.md
.github/workflows/: ci.yml  release.yml
boards/: heltec_t114.json  nrf52840_s140_v6.ld  rak4631.json  tracker_t1000_e.json  waveshare_rp2040_lora.json
docs/: ARCHITECTURE.md  BUILDING.md  FLASHING.md  README.md  RELEASE_CHECKLIST.md  RF_SETUP_EU868.md  RML.md  ROLES.md  TROUBLESHOOTING.md  beta-release-checklist.md  quickstart.md  radio.md  releasing.md  routing.md
docs/companion/: private_chat_ux.md
docs/compatibility/: private_chat_matrix.md
docs/en/: architecture.md  build-guide.md  companion-ble-integration.md  firmware-integration.md  language-reference.md  next-gen-routing.md  overview.md  protocol.md  roles.md  services.md
docs/nl/: architectuur.md  bouwhandleiding.md  firmware-integratie.md  overzicht.md  taalreferentie.md
docs/protocol/: private_chat.md
docs/runtime/: private_chat_delivery_model.md
examples/: chat_relay.rivr  store_forward_mailbox.rivr  telemetry_periodic.rivr
firmware_core/: CMakeLists.txt  airtime_sched.c  airtime_sched.h  beacon_sched.c  beacon_sched.h  build_info.c  build_info.h  channel.c  channel.h  dutycycle.c  dutycycle.h  ed25519_verify.c  ed25519_verify.h  fwd_set.h  main.c  main_linux.c  neighbor_table.c  neighbor_table.h  nvs_rp2040.cpp  opfwd_suppress.h  pending_queue.c  pending_queue.h  platform_esp32.c  platform_esp32.h  platform_linux.c  platform_linux.h  platform_nrf52.c  platform_nrf52.h  platform_rp2040.cpp  platform_rp2040.h  policy.c  policy.h  private_chat.c  private_chat.h  protocol.c  protocol.h  radio_lr1110_nrf52.cpp  radio_sx1262.c  radio_sx1262.h  radio_sx1262_linux.c  (+51 more)
firmware_core/ble/: rivr_ble.c  rivr_ble.h  rivr_ble_companion.c  rivr_ble_companion.h  rivr_ble_frag.c  rivr_ble_frag.h  rivr_ble_nrf52.cpp  rivr_ble_service.c  rivr_ble_service.h  rivr_ble_service_internal.h
firmware_core/crypto/: hmac_sha256.c  hmac_sha256.h
firmware_core/display/: display.c  display.h  display_nrf52.cpp
firmware_core/gps/: rivr_gps.c  rivr_gps.h
firmware_core/hal/: crypto_if.h  feature_flags.h  radio_if.c  radio_if.h  timer_if.h
firmware_core/iface/: rivr_iface_ble.c  rivr_iface_ble.h  rivr_iface_lora.c  rivr_iface_lora.h  rivr_iface_usb.c  rivr_iface_usb.h
firmware_core/linux/include/: esp_attr.h  esp_err.h  esp_log.h  esp_system.h  nvs.h  nvs_flash.h
firmware_core/linux/include/driver/: gpio.h  spi_master.h  uart.h
firmware_core/linux/include/freertos/: FreeRTOS.h  task.h
firmware_core/rivr_bus/: rivr_bus.c  rivr_bus.h  rivr_bus_types.h  rivr_dispatch.c  rivr_dispatch.h  rivr_dup_cache.c  rivr_dup_cache.h
firmware_core/rml/: rml.c  rml.h  rml_codec.c  rml_policy.c  rml_seen.c  rml_stats.c
main/: CMakeLists.txt
plans/: 2026-05-03-rivr-all-fixes-v1.md
release/client_heltec_t114_ble/: README.txt  flash.sh  rivr_client_heltec_t114_ble.json
rivr_companion/: README.md  pubspec.yaml
rivr_core/: Cargo.toml
rivr_core/fuzz/: Cargo.toml
rivr_core/fuzz/fuzz_targets/: compiler.rs  dsl_parse.rs  ffi_entrypoints.rs
rivr_core/src/: ast.rs  compiler.rs  ffi.rs  lib.rs  parser.rs
rivr_core/src/adapt/: mod.rs  ringbuf.rs
rivr_core/src/runtime/: alloc_guard.rs  bounded.rs  engine.rs  event.rs  fixed.rs  mod.rs  node.rs  opcode.rs  scheduler.rs  value.rs
rivr_host/: Cargo.toml
rivr_host/src/: main.rs  replay.rs
rivr_layer/: rivr_cli.c  rivr_cli.h  rivr_embed.c  rivr_embed.h  rivr_sinks.c  rivr_sinks.h  rivr_sources.c  rivr_sources.h  rivr_svc.c  rivr_svc.h
rivr_layer/rivr_programs/: default_program.h
scripts/: bundle_firmware.py  flash.sh  monitor.sh  package_firmware.py
sdkconfig/: sdkconfig.client_esp32devkit_e22_900_ble
src/: ast.rs  compiler.rs  main.rs  parser.rs
src/runtime/: engine.rs  event.rs  mod.rs  node.rs  replay.rs  scheduler.rs  value.rs
tests/: Makefile  acceptance_asan  acceptance_test  ci_determinism_check.sh  ci_size_check.sh  dutycycle_asan  dutycycle_test  fuzz_ffi_harness  fuzz_ffi_harness.c  ota_asan  ota_test  policy_asan  policy_test  radio_recovery_test  recovery_asan  replay.c  replay.h  replay_asan  replay_test  rml_sim.c  rml_sim.h  run.ps1  stdatomic.h  test_acceptance.c  test_beacon.c  test_channel.c  test_dutycycle.c  test_fabric.c  test_ota.c  test_policy.c  test_private_chat.c  test_radio_recovery.c  test_replay.c  test_retry.c  test_rml.c  test_rml_sim.c  test_stubs.c
tests/baselines/: esp32_sizes.txt  host_sizes.txt
tests/golden/: replay_sha256.txt
tests/include/: esp_attr.h  esp_idf_version.h  esp_log.h  esp_task_wdt.h
tests/traces/: multihop.jsonl  route_aging.jsonl  saturation.jsonl
tools/: Makefile  inject_git_sha.py  rivr_decode  rivr_decode.c
tools/rivr-mesh-map/: README.md  rivr_mesh_map.py
tools/rivr-monitor/: README.md  rivr_monitor.py
tools/vscode-rivr/: README.md  language-configuration.json  package.json
variants/esp32devkit_e22_900/: config.h  platformio.ini
variants/esp32devkit_e22_900_client/: config.h
variants/esp32devkit_e22_900_repeater/: config.h
variants/heltec_lora32_v2/: config.h  platformio.ini
variants/heltec_lora32_v3/: config.h  platformio.ini
variants/heltec_lora32_v4/: config.h  platformio.ini
variants/heltec_t114/: config.h  main_nrf52.cpp  platformio.ini  (+2 more)
wasm/: Makefile  rivr_routing_wasm.c  wasm_stubs.c
(+70 files in other folders)
