[package]
name        = "rivr_core"
version     = "0.1.0"
edition     = "2021"
description = "RIVR core – no_std + alloc stream-graph runtime and compiler"

# -------------------------------------------------------------------
# Crate types
# -------------------------------------------------------------------
# `rlib`      – normal Rust crate (used by rivr_host)
# `staticlib` – C-linkable .a for ESP32 firmware embedding
#                Build with:  cargo build --target xtensa-esp32-espidf
#                             --no-default-features --features ffi
# -------------------------------------------------------------------
[lib]
crate-type = ["rlib", "staticlib"]

# -------------------------------------------------------------------
# Feature flags
# -------------------------------------------------------------------
# `std`      – enables std::collections, std::io, full serde  (default)
# `alloc`    – heap types without std (Vec/String/BTreeMap via alloc crate)
# `ffi`      – C-ABI exports for embedding in C firmware (ESP32), requires alloc
# `embedded` – convenience: ffi + no std + alloc
# -------------------------------------------------------------------
[features]
default  = ["std"]
std      = ["serde/std", "alloc"] # host build: enable std + heap types
alloc    = ["serde/alloc"]        # no_std + heap: Vec/String from alloc crate
ffi      = ["alloc"]              # C-ABI exports
embedded = ["ffi"]                # convenience: ffi + no std + alloc

[dependencies]
serde      = { workspace = true }
